# learning-dbt

./: .gitignore  pyproject.toml
tutorial/: dbt_project.yml
tutorial/models/: schema.yml
