[tool.poetry]
name = "learning-dbt"
version = "0.1.0"
description = "Tutorial work for DBT"
authors = ["Adam Hoffstein <adam.hoffstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-bigquery = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
